# waterlib

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPONENTS.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  KERNEL_ENFORCEMENT_SUMMARY.md  QA_INFRASTRUCTURE.md  README.md  check_wgen.py  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt  requirements-viz.txt  requirements.txt  waterlib_lint.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.kiro/steering/: waterlib-workflow.md
docs/: API_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  KERNEL_PURITY_ENFORCEMENT.md  README_AWBM.md  WGEN.f  YAML_SCHEMA.md
examples/: driver_api_example.py
scripts/: check_doc_sync.py  check_kernel_imports.py  setup_dev.py  test_enforcement.py
test_logging/: README.md  run_model.py
test_logging/data/: README.md  climate_timeseries.csv  wgen_params.csv
test_logging/models/: baseline.yaml
test_logging/outputs/: results.csv
tests/: __init__.py  property_test_imports.py
tests/unit/: __init__.py  test_catchment.py  test_catchment_mass_balance.py  test_check_doc_sync.py  test_config.py  test_demand.py  test_diversion.py  test_drivers.py  test_end_to_end_workflow.py  test_junction.py  test_logic.py  test_met_station.py  test_pump.py  test_reservoir.py  test_reservoir_mass_balance.py  test_scaffold_data_files.py  test_scaffold_directory.py  test_scaffold_integration.py  test_wgen_parameter_estimator.py
waterlib/: __init__.py  climate.py  plotting.py
waterlib/analysis/: __init__.py  logger.py  plotting.py
waterlib/components/: __init__.py  catchment.py  demand.py  diversion.py  junction.py  logic.py  met_station.py  pump.py  reservoir.py
waterlib/core/: __init__.py  base.py  config.py  drivers.py  exceptions.py  loader.py  results.py  scaffold.py  simple_model.py  simulation.py  validation.py
waterlib/kernels/: __init__.py
(+38 files in other folders)
